--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "expect_macro"
 version = "0.0.0"
-authors = ["codeure24 <85784092+antoineB24@users.noreply.github.com>"]
-description = "A `cargo generate` template for quick-starting a procedural macro crate"
-keywords = ["template", "proc_macro", "procmacro"]
+authors = ["NightProg <85784092+NightProg@users.noreply.github.com>"]
+description = "This crate is used to generate a expected method for each variant of an enum."
+keywords = ["expect_macro", "proc_macro", "procmacro"]
 edition = "2018"
+readme = "README.md"
 
 [lib]
 proc-macro = true
